2008-05-19  Srinivasa Ragavan  <sragavan@novell.com>

	* mail/em-folder-view.c: Make non junk learn work again.

2008-05-16  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #514383

	* mail.error.xml: Remove the "ask-mark-read" error.

2008-05-14  Jeffrey Stedfast  <fejj@novell.com>

	Needed so that IMAP4 can allow users to configure cache
	expiration per-folder.

	* em-folder-properties.c (emfp_get_folder_item): Add support for
	CAMEL_ARG_INT and CAMEL_ARG_DBL.
	(emfp_commit): Same.

2008-05-14  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #463040, Patch by Milan Crha

	* em-folder-browser.c (emfb_list_message_selectedi), (emfb_set_folder):
	Forget former selected uid as soon as we know we moved to other.

2008-05-09  Sankar P  <psankar@novell.com>

	** Fix for bug #531519

	* em-format-html-display.c: (efhd_message_update_bar):
	Evolution crashes on print-preview.

	** Committed on behalf of Srinivasa Ragavan <sragavan@novell.com>

2008-05-06  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #424744

	* em-composer-prefs.c:
	* em-format-html.c:
	* em-format-quote.c:
	* em-mailer-prefs.c:
	Use camel-iconv.c instead of e-iconv.h (now deprecated).

2008-05-06  Matthew Barnes  <mbarnes@redhat.com>

	* mail-component.c (mail_component_show_logger):
	Use the GtkCellRendererText's "markup" property for error messages.

2008-05-05  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #531426

	* em-format-html.c (efh_format_headers):
	Display face header images at 48x48 instead of 64x64.
	Patch from Roland Clobus.

2008-05-04  Matthew Barnes  <mbarnes@redhat.com>

	* mail-component.c (mail_component_show_logger):
	Fix up the Debug Logs window a bit:
	- Add a Close button.
	- Fix some spacing issues (HIG compliance).
	- Just show the log level icon.  Add a tooltip for the icon showing
	  a description of the log level (Error/Warning/Debug).  Also, avoid
	  using e-icon-factory.  Set the GtkCellRendererPixbuf's "stock-id"